bug fix generazione percorsi e aggiunta attributo "ciclabili"

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "da77dda3",
    "metadata": {},
    "outputs": [],
@@ -241,18 +241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c774a8e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf_list = [\n",
     "    {\"gdf\":  gpd.read_file(PATH_PARCHI_CLEAN),\n",
-    "     \"tipo\": \"parchi\",\n",
-    "     \"gdf\":  gpd.read_file(PATH_IMPIANTI_SPORTIVI_CLEAN),\n",
-    "     \"tipo\": \"Impianti sportivi\",\n",
-    "     \"gdf\":  gpd.read_file(PATH_AREE_GIOCO_CLEAN),\n",
-    "     \"tipo\": \"Aree gioco\",}\n",
+    "     \"tipo\": \"parchi\"},\n",
+    "     {\"gdf\":  gpd.read_file(PATH_AREE_GIOCO_CLEAN),\n",
+    "     \"tipo\": \"Aree gioco\"},\n",
+    "     {\"gdf\":  gpd.read_file(PATH_IMPIANTI_SPORTIVI_CLEAN),\n",
+    "     \"tipo\": \"Impianti sportivi\"}\n",
+    "     \n",
     "]\n",
     "Graph_functions.auto_analysis_poi(gdf_list, PATH_GEOJSON=PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN)"
    ]
@@ -310,53 +311,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0d0bf844",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                              length\n",
-      "highway                             \n",
-      "footway                   170.089942\n",
-      "cycleway                   99.524474\n",
-      "residential                41.782885\n",
-      "tertiary                   21.247664\n",
-      "primary                     9.338757\n",
-      "secondary                   8.411177\n",
-      "service                     4.475873\n",
-      "pedestrian                  3.222769\n",
-      "path                        2.632774\n",
-      "track                       2.437919\n",
-      "footway service             1.057099\n",
-      "residential footway         0.813679\n",
-      "footway steps               0.689121\n",
-      "unclassified                0.599756\n",
-      "cycleway footway            0.484203\n",
-      "footway pedestrian          0.437563\n",
-      "residential cycleway        0.433831\n",
-      "residential pedestrian      0.312306\n",
-      "cycleway path               0.290587\n",
-      "footway path                0.286492\n",
-      "tertiary_link               0.211646\n",
-      "service pedestrian          0.189728\n",
-      "residential path            0.163217\n",
-      "unclassified primary        0.158020\n",
-      "secondary_link              0.157308\n",
-      "service path                0.150053\n",
-      "residential service         0.137565\n",
-      "residential secondary       0.127041\n",
-      "unclassified residential    0.116470\n",
-      "cycleway service            0.093506\n",
-      "primary_link                0.083006\n",
-      "living_street               0.070216\n",
-      "steps                       0.003908\n",
-      "Tot: 370.2305565671765\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Stampiamo il risultato\n",
     "print(gdf_analisi_sport_mod_most_highways)\n",
@@ -384,15 +342,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "c1ec5deb",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf_list = [\n",
     "    {\"gdf\":  gpd.read_file(PATH_BIBLIOTECHE_CLEAN),\n",
-    "     \"tipo\": \"Biblioteche\",\n",
-    "     \"gdf\":  gpd.read_file(PATH_SCUOLE_CLEAN),\n",
+    "     \"tipo\": \"Biblioteche\"},\n",
+    "     {\"gdf\":  gpd.read_file(PATH_SCUOLE_CLEAN),\n",
     "     \"tipo\": \"Scuole\"}\n",
     "     ]\n",
     "Graph_functions.auto_analysis_poi(gdf_list, PATH_GEOJSON=PATH_ISTRUZIONE_CLEAN)"
@@ -537,17 +495,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "bf55f379",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf_list = [\n",
     "    {\"gdf\":  gpd.read_file(PATH_MUSEI_CLEAN),\n",
-    "     \"tipo\": \"Musei\",\n",
-    "     \"gdf\":  gpd.read_file(PATH_CINEMA_CLEAN),\n",
-    "     \"tipo\": \"Cinema\", \n",
-    "     \"gdf\":  gpd.read_file(PATH_TEATRI_CLEAN),\n",
+    "     \"tipo\": \"Musei\"},\n",
+    "     {\"gdf\":  gpd.read_file(PATH_CINEMA_CLEAN),\n",
+    "     \"tipo\": \"Cinema\"}, \n",
+    "     {\"gdf\":  gpd.read_file(PATH_TEATRI_CLEAN),\n",
     "     \"tipo\": \"Teatri\"}\n",
     "     ]\n",
     "Graph_functions.auto_analysis_poi(gdf_list, PATH_GEOJSON=PATH_CULTURA_SPETTACOLO_CLEAN)"
