--- a/Scripts/Rete_ciclabile_stradale.ipynb
+++ b/Scripts/Rete_ciclabile_stradale.ipynb
@@ -15,13 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "import pickle\n",
-    "from shapely import MultiLineString, LineString, Point\n",
     "\n",
     "import geopandas as gpd\n",
     "import osmnx as ox\n",
-    "import networkx as nx\n",
     "\n",
     "from my_paths import *\n",
     "import Graph_functions"
@@ -164,13 +161,14 @@
     "Il proceso comprende:\n",
     "1. Selezione attributi da mantenere: name, highway, lenght, maxspeed, tunnel, access, service, geometry\n",
     "2. - Aggiunta di attributi custom:\n",
-    "    - weight_multipler: Un moltiplicatore che verrà applicato a weigth in base a \"highway\" tramite\n",
+    "    - **weight_multipler**: Un moltiplicatore che verrà applicato a weigth in base a \"highway\" tramite\n",
     "    il parametro \"custom_weights\", oppure da file se non specificato.\n",
     "    N.B: di base cycleway dovrebbe assumere valore: 0, per dare massima priorità nel calcolo dei percorsi.\n",
-    "    - weight: Sarà di base: length * weight_multipler.\n",
-    "    - tipo: Un tag che viene assegnato a tutti i grafi del progetto. In questo caso assumerà valore \"Strade_ciclabili\".\n",
-    "    - artificial: Un tag che viene assegnato a tutit i grafi del progetto. Essendo questi archi reali: False\n",
-    "    - poi: Un tag che viene assegnato a tutti i grafi del progetto. Essendo queste le strade: False\n",
+    "    - **weight**: Sarà di base: length * weight_multipler.\n",
+    "    - **tipo**: Un tag che viene assegnato a tutti i grafi del progetto. In questo caso assumerà valore \"Strade_ciclabili\".\n",
+    "    - **artificial**: Un tag che viene assegnato a tutit i grafi del progetto. Essendo questi archi reali: False\n",
+    "    - **poi**: Un tag che viene assegnato a tutti i grafi del progetto. Essendo queste le strade: False\n",
+    "    - **ciclabile**: Un tag booleano per filtrare le piste ciclabili dalle altre strade.\n",
     "3. Se Geometria non presente, aggiungiamo una LineString \"dritta\" tra i due nodi\n",
     "(può capitare che non ci sia tra nodi molto vicini).\n",
     "4. Infine il grafo viene reso bidirezionale senza ridondanza di archi tra due punti."
