progresso filtro poi

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -15,14 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "import json\n",
-    "\n",
-    "from shapely import Point, LineString\n",
+    "from shapely import Point\n",
     "import geopandas as gpd\n",
-    "import networkx as nx\n",
-    "from networkx.algorithms.approximation import steiner_tree\n",
-    "import osmnx as ox\n",
     "\n",
     "from my_paths import *\n",
     "import Graph_functions"
@@ -77,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "57f8b695",
    "metadata": {},
    "outputs": [],
@@ -96,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "cbde9a58",
    "metadata": {},
    "outputs": [],
@@ -119,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "37bed9f2",
    "metadata": {},
    "outputs": [],
@@ -146,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "b029f61f",
    "metadata": {},
    "outputs": [],
@@ -159,12 +153,12 @@
    "id": "49e307b0",
    "metadata": {},
    "source": [
-    "1. Raggruppiamo per strade e vediamo i km per ogni tipologia"
+    "1. Km per ogni \"highway\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "19eebf89",
    "metadata": {},
    "outputs": [
@@ -197,25 +191,28 @@
    "id": "a5ff4dc4",
    "metadata": {},
    "source": [
-    "2. Calcoliamo i km nuovi da costruire (rimuoviamo cycleway che sono già costruite in teoria)"
+    "2. Km non di \"ciclabile\", quindi da costruire"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5cd86424",
+   "execution_count": 33,
+   "id": "bc44845d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "99.67300939731115 km\n"
-     ]
+     "data": {
+      "text/plain": [
+       "93.91261168478297"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(gdf_extended_ciclabili_highway.drop(\"cycleway\", axis=0).sum().values[0], \"km\")"
+    "float(gdf_extended_ciclabili[gdf_extended_ciclabili[\"ciclabile\"] == \"False\"][\"length\"].sum()/1000)"
    ]
   },
   {
@@ -268,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "9d1ce163",
    "metadata": {},
    "outputs": [],
@@ -277,8 +274,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6363fa28",
+   "metadata": {},
+   "source": [
+    "pre pulizia per tutte le statistiche"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "88d01772",
    "metadata": {},
    "outputs": [],
@@ -297,8 +302,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1ea46bf5",
+   "metadata": {},
+   "source": [
+    "1. Km per \"highway\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "04596a5f",
    "metadata": {},
    "outputs": [],
@@ -306,19 +319,39 @@
     "# Raggruppiamo per \"highway\" e calcoliamo (in km -> /1000) la lunghezza complessiva delle strade\n",
     "gdf_analisi_sport_mod_most_highways = gdf_analisi_sport_mod.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
     "    \"length\": lambda x: sum(x/1000)\n",
-    "    }).sort_values(by=\"length\", ascending=False)"
+    "    }).sort_values(by=\"length\", ascending=False)\n",
+    "# Stampiamo il risultato\n",
+    "print(gdf_analisi_sport_mod_most_highways)\n",
+    "print(f\"Tot: {gdf_analisi_sport_mod_most_highways[\"length\"].sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8452dee7",
+   "metadata": {},
+   "source": [
+    "2. Km non di \"ciclabile\", quindi da costruire"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0d0bf844",
+   "execution_count": 27,
+   "id": "f7ae7804",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "311.62307578992255"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Stampiamo il risultato\n",
-    "print(gdf_analisi_sport_mod_most_highways)\n",
-    "print(f\"Tot: {gdf_analisi_sport_mod_most_highways[\"length\"].sum()}\")"
+    "float(gdf_analisi_sport_mod[gdf_analisi_sport_mod[\"ciclabile\"] == \"False\"][\"length\"].sum()/1000)"
    ]
   },
   {
@@ -342,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c1ec5deb",
    "metadata": {},
    "outputs": [],
@@ -357,11 +390,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7d8c5347",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "218"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf_scuole = gpd.read_file(PATH_SCUOLE_CLEAN)\n",
+    "len(gdf_scuole[gdf_scuole[\"Grado\"] == \"Scuola primaria\"])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a41c8fc2",
    "metadata": {},
    "source": [
-    "Analisi lunghezza strade create\n"
+    "### Statisiche"
    ]
   },
   {
@@ -419,50 +474,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f4d8f98d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                              length\n",
-      "highway                             \n",
-      "footway                   103.275866\n",
-      "cycleway                   83.758404\n",
-      "residential                34.211914\n",
-      "tertiary                   23.518353\n",
-      "secondary                  12.496913\n",
-      "primary                     6.308517\n",
-      "track                       3.156910\n",
-      "service                     1.937384\n",
-      "pedestrian                  1.816089\n",
-      "path                        1.562238\n",
-      "footway steps               0.456524\n",
-      "unclassified                0.297007\n",
-      "secondary_link              0.224449\n",
-      "track service path          0.217139\n",
-      "tertiary_link               0.175544\n",
-      "residential cycleway        0.168887\n",
-      "residential footway         0.168512\n",
-      "footway pedestrian          0.158629\n",
-      "residential pedestrian      0.146171\n",
-      "cycleway path               0.133149\n",
-      "footway service             0.127157\n",
-      "cycleway footway            0.112020\n",
-      "primary_link                0.097783\n",
-      "cycleway service            0.093506\n",
-      "living_street               0.078276\n",
-      "residential steps           0.077341\n",
-      "footway platform            0.063848\n",
-      "steps                       0.031466\n",
-      "unclassified residential    0.026723\n",
-      "residential service         0.001870\n",
-      "Tot: 274.8985915091991\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Stampiamo il risultato\n",
     "print(gdf_analisi_istruzione_mod_most_highways)\n",
@@ -495,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "bf55f379",
    "metadata": {},
    "outputs": [],
@@ -513,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "id": "38d67835",
    "metadata": {},
    "outputs": [
@@ -532,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "id": "9e7af660",
    "metadata": {},
    "outputs": [],
@@ -567,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "id": "fbc3726e",
    "metadata": {},
    "outputs": [
@@ -575,27 +590,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                             length\n",
-      "highway                            \n",
-      "cycleway                  32.205970\n",
-      "footway                   20.011504\n",
-      "residential                8.810256\n",
-      "tertiary                   4.989268\n",
-      "secondary                  4.598090\n",
-      "primary                    1.666067\n",
-      "pedestrian                 0.914740\n",
-      "footway steps              0.381345\n",
-      "service                    0.265643\n",
-      "unclassified               0.204832\n",
-      "secondary_link             0.172719\n",
-      "residential cycleway       0.116689\n",
-      "residential pedestrian     0.097656\n",
-      "primary_link               0.082050\n",
-      "footway service            0.078886\n",
-      "unclassified residential   0.066621\n",
-      "cycleway footway           0.058601\n",
-      "path                       0.001734\n",
-      "Tot: 74.7226731089275\n"
+      "                         length\n",
+      "highway                        \n",
+      "cycleway              43.951569\n",
+      "footway               28.989399\n",
+      "residential           11.314465\n",
+      "secondary              7.660920\n",
+      "tertiary               5.699776\n",
+      "pedestrian             2.074184\n",
+      "primary                1.281142\n",
+      "footway steps          0.496667\n",
+      "service                0.442759\n",
+      "cycleway path          0.423736\n",
+      "path                   0.276162\n",
+      "unclassified           0.204832\n",
+      "secondary_link         0.154071\n",
+      "residential cycleway   0.116689\n",
+      "primary_link           0.082050\n",
+      "footway service        0.078886\n",
+      "cycleway footway       0.058601\n",
+      "footway pedestrian     0.048820\n",
+      "steps path             0.018311\n",
+      "Tot: 103.37304195969466\n"
      ]
     }
    ],
@@ -630,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "c6b788aa",
    "metadata": {},
    "outputs": [],
@@ -644,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "id": "447087ac",
    "metadata": {},
    "outputs": [
@@ -663,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "id": "cddb1238",
    "metadata": {},
    "outputs": [],
@@ -688,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "id": "6329b55c",
    "metadata": {},
    "outputs": [
@@ -737,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "e8b3410e",
    "metadata": {},
    "outputs": [],
@@ -769,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "2287bae9",
    "metadata": {},
    "outputs": [],
@@ -791,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "id": "f9e68e12",
    "metadata": {},
    "outputs": [],
@@ -814,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "9205ef0d",
    "metadata": {},
    "outputs": [],
@@ -835,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "a4eed437",
    "metadata": {},
    "outputs": [],
@@ -853,13 +869,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 83,
    "id": "bf0a160b",
    "metadata": {},
    "outputs": [],
    "source": [
     "conteggi = gpd.GeoDataFrame(conteggi, geometry=\"geometry\", crs=CRS_GRAD)\n",
     "conteggi.to_file(PATH_SCORE_X_MUNICIPI, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38323186",
+   "metadata": {},
+   "source": [
+    "### Da qui"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3270814",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ..........\n",
+    "colonne = []\n",
+    "for poi in parametro:\n",
+    "    colonne.append(poi[\"colonna\"])\n",
+    "\n",
+    "n_poi = 1\n",
+    "\n",
+    "gdfs = []\n",
+    "for poi in parametro:\n",
+    "    colonne.append(poi[\"gdf\"])\n",
+    "\n",
+    "# -------------\n",
+    "parametro = [\n",
+    "    {\"gdf:\": gpd.read_file()},\n",
+    "    \"tipo\": \"parchi\",\n",
+    "    {\"gdf:\": gpd.read_file()}\n",
+    "    \"tipo\": \"impianti\",\n",
+    "    {\"gdf:\": gpd.read_file(),\n",
+    "     \"tipo\": \"aree gioco\",},\n",
+    " ]\n",
+    "\n",
+    "list_gdf = []\n",
+    "for gdf in gdfs:\n",
+    "    list_gdf.append({\"gdf\": get_near_poi(gdf, [1,2,5,2,5]),\n",
+    "                     \"tipo\": \"parchi\"})\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "94e6e29f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colonne = [\"parchi\", \"impianti_sportivi\", \"aree_gioco\"]\n",
+    "conteggi_sport = conteggi[colonne].copy()\n",
+    "conteggi_sport[\"Totale\"] = conteggi_sport.sum(axis=1)\n",
+    "totale_poi_gdf = int(conteggi_sport[\"Totale\"].sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b30063d",
+   "metadata": {},
+   "source": [
+    "numero_colonna : numero_totale = x : numero_massimo_poi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca5e7b56",
+   "metadata": {},
+   "source": [
+    "x = numero_colonna * numero_massimo_poi / numero_totale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "091ee008",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_poi = 30\n",
+    "def converti_totale(row):\n",
+    "    # Da inserire nella formula anche le variabili di:\n",
+    "    # Inquinamento e incidenti\n",
+    "    risultato = int(row[\"Totale\"]*max_poi/totale_poi_gdf)\n",
+    "    if risultato == 0:\n",
+    "        return 1\n",
+    "    return risultato\n",
+    "\n",
+    "conteggi_sport[\"nuovo_totale\"] = conteggi_sport.apply(converti_totale)\n",
+    "conteggi_sport[\"MUNICIPIO\"] = conteggi_sport.index +1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "d361f714",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>tipo</th>\n",
+       "      <th>parchi</th>\n",
+       "      <th>impianti_sportivi</th>\n",
+       "      <th>aree_gioco</th>\n",
+       "      <th>Totale</th>\n",
+       "      <th>nuovo_totale</th>\n",
+       "      <th>MUNICIPIO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>49</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>84</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>74</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>112</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>104</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>127</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>127</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>155</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>185</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "tipo  parchi  impianti_sportivi  aree_gioco  Totale  nuovo_totale  MUNICIPIO\n",
+       "0          1                  0           0      49             1          1\n",
+       "1          1                  1           0      84             2          2\n",
+       "2          1                  1           0      74             2          3\n",
+       "3          1                  1           1     112             3          4\n",
+       "4          1                  1           1     104             3          5\n",
+       "5          1                  1           1     127             3          6\n",
+       "6          1                  1           1     127             3          7\n",
+       "7          2                  1           1     155             4          8\n",
+       "8          2                  2           1     185             5          9"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for idx, row in conteggi_sport.iterrows():\n",
+    "    divisione = int(row[\"nuovo_totale\"] / len(colonne))\n",
+    "    for i in range(len(colonne)):\n",
+    "        conteggi_sport.iloc[idx, i] = divisione\n",
+    "    resto = row[\"nuovo_totale\"] % len(colonne)\n",
+    "    for i in range(resto):\n",
+    "        conteggi_sport.iloc[idx, i] += 1\n",
+    "\n",
+    "conteggi_sport"
    ]
   }
  ],
