--- a/Scripts/Inquinamento.ipynb
+++ b/Scripts/Inquinamento.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "id": "28682f84",
    "metadata": {},
    "outputs": [],
@@ -189,20 +189,23 @@
     "    for pm in [\"pm10\", \"pm25\"]:\n",
     "        df = gpd.pd.read_json(StringIO(row[pm]))\n",
     "        df[\"day\"] = gpd.pd.to_datetime(df[\"day\"])\n",
-    "        df = df[df['day'].dt.year.isin([2023])].reset_index()\n",
-    "        if len(df) > 200:\n",
+    "        df = df[df['day'].dt.year.isin([2025, 2024, 2023, 2022])].reset_index()\n",
+    "        if len(df) > 150:\n",
     "            row[pm] = df[\"median\"].mean()\n",
     "        else:\n",
     "            row[pm] = None\n",
     "    return row\n",
     "\n",
     "gdf = gpd.read_file(PATH_INQUINAMENTO_INGESTION_RAW)\n",
-    "gdf = gpd.GeoDataFrame(gdf.apply(set_mean_pm, axis=1), geometry=gdf.geometry.name)"
+    "gdf = gpd.GeoDataFrame(gdf.apply(set_mean_pm, axis=1), geometry=gdf.geometry.name, crs=CRS_GRAD)\n",
+    "\n",
+    "# Eliminiamo la \"stazione\" che identifica milano in generale, non una vera stazione\n",
+    "gdf = gdf[gdf[\"id\"] != 514987]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2fd823e5",
+   "id": "a160128a",
    "metadata": {},
    "source": [
     "Salviamo su Clean"
@@ -210,12 +213,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "96fbce7f",
+   "execution_count": null,
+   "id": "41dd31f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf.to_file(PATH_INQUINAMENTO_INGESTION_CLEAN, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "784aacc3",
+   "metadata": {},
+   "source": [
+    "Aggreghiamo per Municipio, facendo la media delle stazioni all'interno di ogni Municipio (solo pm10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29aa33c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf = gpd.read_file(PATH_INQUINAMENTO_INGESTION_CLEAN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dad88be7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colonne_da_tenere = [\"pm25\", \"geometry\"]\n",
+    "gdf_inquinamento_municipi = gdf[colonne_da_tenere].copy()\n",
+    "gdf_municipi = gpd.read_file(PATH_MUNICIPI_CLEAN)[[\"MUNICIPIO\", \"geometry\"]]\n",
+    "gdf_inquinamento_municipi = gpd.sjoin(gdf_inquinamento_municipi, gdf_municipi, \"left\", predicate=\"intersects\").drop([\"index_right\"], axis=1)\n",
+    "\n",
+    "gdf_inquinamento_municipi.loc[gdf_inquinamento_municipi[\"MUNICIPIO\"].isna(), \"MUNICIPIO\"] = 6\n",
+    "gdf_inquinamento_municipi[\"MUNICIPIO\"]= gdf_inquinamento_municipi[\"MUNICIPIO\"].astype(int)\n",
+    "gdf_inquinamento_municipi = gdf_inquinamento_municipi.sort_values(\"MUNICIPIO\")\n",
+    "\n",
+    "for idx, row in gdf_inquinamento_municipi.iterrows():\n",
+    "    for idx_municipio, row_municipio in gdf_municipi.iterrows():\n",
+    "        if row[\"MUNICIPIO\"] == row_municipio[\"MUNICIPIO\"]:\n",
+    "            geometry = row_municipio[\"geometry\"]\n",
+    "        gdf_inquinamento_municipi.loc[idx, \"geometry\"] = geometry\n",
+    "gdf_inquinamento_municipi\n",
+    "conteggi = gpd.GeoDataFrame(gdf_inquinamento_municipi.groupby(['MUNICIPIO', 'geometry']).mean().reset_index(), crs=CRS_GRAD)\n",
+    "conteggi.to_file(PATH_INQUINAMENTO_MEDIA_MUNICIPI_CLEAN, driver=\"GeoJSON\")"
    ]
   }
  ],
